# glitch

./: CONVERSATION.md  README.md  VISION.md  WHIMSY.md  justfile  pyproject.toml
.claude/skills/adr-relay/: SKILL.md
.github/workflows/: pages.yml
docs/: index.html
docs/adr/collector/: 001-collector-architecture.md  002-external-tool-interaction.md  003-artifact-bundle-design.md  004-summary-generation.md  005-testing-strategy.md  006-execution-ux.md
docs/adr/phase3/: 0001-package-structure.md  0002-copilot-sdk-integration.md  0003-auth-resolution.md  0008-patterns-store.md  (+6 more)
docs/adrs/: 0000-record-architectural-decisions.md
docs/site/: index.html
docs/specs/: glitch-cli.md  phase-1-discovery.md  phase-2-collection.md  phase-3-analysis.md
src/glitch/: __main__.py  analyze.py  cli.py  collect.py  discover.py
tests/: conftest.py  test_cli.py  test_collect_cli.py  test_collectors_base.py  test_collectors_ceph.py  test_collectors_error_handling.py  test_collectors_juju.py  test_collectors_kubernetes.py  test_collectors_lxd.py  test_collectors_test_artifacts.py  test_discover_cache.py  test_discover_client.py  test_discover_duration.py  test_discover_e2e.py  test_discover_fanout.py  test_discover_heuristics.py  test_discover_models.py  test_discover_scoring.py  test_manifest.py  test_runner.py  test_summary.py
tests/analyze/: conftest.py  test_auth.py  test_classify.py  test_copilot.py  test_loader.py  test_output.py  test_patterns.py  test_remediate.py  test_run.py
tests/resources/: README.md  discovery-output.json  juju-debug-log.txt  juju-status.json  k8s-events.json  lxd-list.json
(+54 files in other folders)
